--- a/src/client/src/app/components/education/education.component.scss
+++ b/src/client/src/app/components/education/education.component.scss
@@ -1,6 +1,6 @@
 .education {
   padding: 12rem 2rem;
-  background: #f8f9fa;
+  background: #f5f1e8;
   position: relative;
 }
 
