--- a/src/client/src/app/components/projects/projects.component.scss
+++ b/src/client/src/app/components/projects/projects.component.scss
@@ -1,6 +1,6 @@
 .projects {
   padding: 12rem 2rem;
-  background: #ffffff;
+  background: #faf8f3;
   position: relative;
   border-top: 1px solid #e9ecef;
   border-bottom: 1px solid #e9ecef;
